fixed navbar visibility (attempt 3)

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 .topbar {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -29,7 +29,7 @@ body {
   align-items: center;
   border-bottom: 5px solid red;
   background: #1e2229;
-  z-index: 1;
+  z-index: 2;
 }
 
 svg {
@@ -72,14 +72,14 @@ a:hover {
 }
 
 .dropdown {
-  position: absolute;
+  position: fixed;
   right: 2rem;
   top: 80px;
   right: 52px;
-  width: 300px;
+  width: unset;
   list-style: none;
   display: none;
-  z-index: 1;
+  z-index: 3;
 }
 
 .close {
@@ -108,12 +108,6 @@ a:hover {
     border-style: solid;
     border-color: red;
     background: #1e2229;
-  }
-}
-@media (max-width: 575px) {
-  .dropdown {
-    left: 2rem;
-    width: unset;
   }
 }
 
